<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PeopleGoingActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_people_going"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_people_going"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people_going_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/people_wont_go_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people_not_going_tab" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_people_going"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout_people_going"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <TextView
        android:id="@+id/tv_empty_list_people_going"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/people_going_empty_list"
        android:textAppearance="@style/TextSecondary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout_people_going" />

</androidx.constraintlayout.widget.ConstraintLayout>